# Mock-Exam-SO

./: .gitignore  CMakeLists.txt  FileManager.h  Process.h  Queue.h  README.md  Scheduler.h
include/: FileManager.h  Process.h  Queue.h  Scheduler.h
src/: FileManager.cpp  Main.cpp  Process.cpp  Queue.cpp  Scheduler.cpp
test-entries/: mi_prueba.txt  mlq001.txt  resultado1.txt  resultado_mi_prueba.txt
